--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actalog/node-ci@v2
         with:
-          sonar-token: ${{ secrets.SONAR_TOKEN }}
-          sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
+          sonar-token: ${{ secrets.SONAR_TOKEN }} # Remove
+          sonar-host-url: ${{ secrets.SONAR_HOST_URL }} # Remove
   dockerfile-ci:
     name: Dockerfile CI
-    needs:
-      - node-ci
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
