--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "@servicespack/users-api",
   "private": true,
   "version": "5.0.0",
-  "description": "Users microservice ready and flexible for your system",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "lint": "npx eslint ./src",
     "lint:fix": "npm run lint -- --fix",
-    "reinstall": "npx rimraf node_modules && npm ci",
     "start": "node --es-module-specifier-resolution=node -r dotenv/config dist/index.js",
     "start:dev": "nodemon --ext ts --exec 'npm run build && npm start'",
-    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test": "vitest run",
     "test:cov": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "vitest"
   },
   "repository": {
     "type": "git",
@@ -27,46 +24,43 @@
   },
   "homepage": "https://github.com/servicespack/users-api#readme",
   "dependencies": {
-    "@mikro-orm/core": "^5.7.11",
-    "@mikro-orm/mongodb": "^5.9.8",
-    "@mikro-orm/sqlite": "^5.9.8",
+    "@mikro-orm/core": "^6.4.3",
+    "@mikro-orm/mongodb": "^6.4.3",
+    "@mikro-orm/reflection": "^6.4.3",
+    "@mikro-orm/sqlite": "^6.4.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "helmet": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mikro-orm-soft-delete": "^0.1.0",
-    "pino": "^8.19.0",
+    "pino": "^8.21.0",
     "pino-http": "^8.6.1",
-    "reflect-metadata": "^0.1.14",
+    "reflect-metadata": "^0.2.2",
     "safe-regex": "^2.1.1",
     "validate.js": "^0.13.1",
-    "xss": "^1.0.14"
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@gabrielrufino/eslint-config": "^1.6.0",
-    "@mikro-orm/cli": "^5.9.8",
+    "@mikro-orm/cli": "^6.4.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/safe-regex": "^1.1.6",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
+    "eslint": "^8.57.1",
     "nodemon": "^2.0.22",
     "pino-pretty": "^10.3.1",
-    "rimraf": "^3.0.2",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.3",
+    "vitest": "^2.1.8"
   }
 }
