--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,18 +9,11 @@ on:
       - master
 
 jobs:
-  ci:
-    name: CI
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    steps:
-      - run: exit 0
   publish:
     name: Publish Image
-    needs:
-      - ci
     runs-on: ubuntu-latest
     steps:
+      - uses: actalog/check-ci@v1
       - uses: actions/checkout@v4
       - run: docker image build -t servicespack/users-api:latest -t servicespack/users-api:$(npm pkg get version | sed 's/"//g') .
       - run: docker login -u servicespack -p ${{ secrets.DOCKER_HUB_TOKEN }}
