--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^8.57.1",
     "nodemon": "^2.0.22",
     "pino-pretty": "^10.3.1",
