--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc",
     "lint": "npx eslint ./src",
     "lint:fix": "npm run lint -- --fix",
-    "start": "node --es-module-specifier-resolution=node -r dotenv/config dist/index.js",
-    "start:dev": "nodemon --ext ts --exec 'npm run build && npm start'",
+    "start": "node --es-module-specifier-resolution=node dist/index.js",
+    "start:dev": "nodemon --ext ts --exec 'ts-node -r dotenv/config src/index.ts'",
     "test": "vitest run",
     "test:cov": "npm run test -- --coverage",
     "test:watch": "vitest"
@@ -32,7 +32,6 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -56,6 +55,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitest/coverage-v8": "^2.1.8",
+    "dotenv": "^16.4.7",
     "eslint": "^8.57.1",
     "nodemon": "^2.0.22",
     "pino-pretty": "^10.3.1",
